# mibel-risk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
notebooks/: 01_portfolio_var.ipynb  02_pfe_derivados.ipynb  03_cva.ipynb
reports/diagnostics/: cva.md  pfe.md  portfolio_var.md
scripts/: _build_cva_notebook.py  _build_pfe_notebook.py  _build_portfolio_var_notebook.py
src/mibel_risk/: __init__.py
src/mibel_risk/backtesting/: __init__.py  christoffersen.py  kupiec.py
src/mibel_risk/cva/: __init__.py  cva.py
src/mibel_risk/pfe/: __init__.py  exposure.py
src/mibel_risk/portfolio/: __init__.py  positions.py  var_portfolio.py
src/mibel_risk/var/: __init__.py  historical.py  monte_carlo.py  parametric.py
tests/: test_backtesting.py  test_cva.py  test_historical.py  test_monte_carlo.py  test_parametric.py  test_pfe.py  test_var_portfolio.py
